fix: do not fire RESERVATION_CANCELLED event when a credit note is issued